--- a/hot_front/css/notifications_css.css
+++ b/hot_front/css/notifications_css.css
@@ -11,20 +11,40 @@ a:hover {
     text-decoration: none;
 }
 
-
-#notify-core-area {
-    width: 100%;
+#directives {
+    width: 350px;
     height: 600px;
     background-image: url("../images/back_right_8.jpg");
     background-repeat: repeat;
     background-size: 100% 100%;
     border-top: 1px solid #b1dfbb;
-    padding: 3rem 0 0 6.1rem;
+    padding: 2rem 0 0 1rem;
+}
+
+#directive-highlight {
+    width: 95%;
+    height: 265px;
+    background-color: rgb(198, 253, 198);
+    border: 2px solid rgb(150, 243, 190);
+}
+
+.directive-items {
+    padding: 0.3rem 0.5rem 0 1.5rem;
+}
+
+#notify-core-area {
+    width: 999px;
+    height: 600px;
+    background-image: url("../images/back_right_8.jpg");
+    background-repeat: repeat;
+    background-size: 100% 100%;
+    border-top: 1px solid #b1dfbb;
+    padding: 2rem 0 0 2rem;
 }
 
 #entries {
     height: 100%;
-    width: 60%;
+    width: 100%;
 
 }
 
@@ -37,5 +57,9 @@ a:hover {
 #date-pick {
     width: 300px;
     height: 42.2px;
+}
+
+#notify-units {
+
 }
 
